# clustered-networks

./: .gitignore  Makefile  README.md  base_model.ipynb  base_model_arj.ipynb  intro-to-brian.ipynb  main.fdb_latexmk  main.fls  main.py  model.py  pyproject.toml  tutorial.ipynb
archive/: base_model.ipynb  base_model_0204.ipynb
clustered_networks/: experiment.py  network.py  params.py
clustered_networks/analysis/: __init__.py  covariance.py  tail.py
clustered_networks/plotting/: __init__.py  correlation.py  covariance.py  fano.py  raster.py  style.py
clustered_networks/submission/clustered_networks/: __init__.py
clustered_networks/submission/clustered_networks/analysis/: firing_rate.py
clustered_networks/submission/clustered_networks/plotting/: covariance.py  distributions.py  raster.py
report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
report/sections/: abstract.tex  discussion.tex  extensions.tex  introduction.tex  methods.tex  model.tex  results.tex
submission/clustered_networks/analysis/: correlation.py  fano.py
