[project]
name = "clustered-networks"
version = "0.1.0"
description = "Slow dynamics and high variability in networks with clustered connections"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brian2>=2.10.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
